adjusting folder structure and added public images

--- a/views/restaurant.hbs
+++ b/views/restaurant.hbs
@@ -2,10 +2,9 @@
 	<main class="col-md-12">
 
 		<!-- Start your code here -->
-		<h1>Hotel Website Home page</h1>
+		<h1>Restaurant</h1>
 		
 		<!-- End your code here  -->
-		<img src="/img/icons/amenities/fridge.svg" alt="Icon">
 
 	</main>
 </div>
