--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
+}
+
 .login-dropdown {
     background-color: #FFFFFF;
     border: #D0D0D0 solid 1px;
