--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,8 @@
 
 		<!-- Start your code here -->
 		<h1>Hotel Website Home page</h1>
+
+		<div class="box-shadow" style="height: 400px; width:400px; border:1px solid black;"></div>
 		
 		<!-- End your code here  -->
 	</main>
