--- a/views/createaccount.hbs
+++ b/views/createaccount.hbs
@@ -13,7 +13,7 @@
         <h1>Create Account</h1>
         <p>Reserve your room now! Create an account to proceed.</p>
         <p class="login-link">Already have an account? <a href="#">Login</a></p>
-        <div class="container">
+        <div class="container card">
             <div class="row justify-content-left">
                 <div class="col-md-6">
                     <h1 class="text-justify mb-4">Account Information</h1>
