--- a/public/css/createaccount.css
+++ b/public/css/createaccount.css
@@ -1,9 +1,3 @@
-/* Reset default styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 /* Basic styling */
 body {
@@ -11,18 +5,8 @@ body {
     background-color: #f9f9f9;
 }
 
-/* .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-} */
-
-h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
+.card{
+    padding: 2em;
 }
 
 p {
@@ -83,3 +67,4 @@ input {
     min-height: 120vh;
     min-width: 50vh;
 }
+
