--- a/views/pages/public/createaccount.hbs
+++ b/views/pages/public/createaccount.hbs
@@ -1,7 +1,7 @@
 <div class="page-wrapper-flex">
     <div class="pa-right-container">
         <div>
-            {{> _h1styled}}
+            {{> _h1styled headerTitle="Create Account"}}
             <p>Reserve your room now! Create an account to proceed.</p>
             <p class="login-link">Already have an account? <a href="#">Login</a></p>
             <div class="card">
