--- a/views/partials/_h1styled.hbs
+++ b/views/partials/_h1styled.hbs
@@ -1,4 +1,4 @@
 <div class="header-container">
-    <h1 class="styled-h1">Create Account</h1>
+    <h1 class="styled-h1">{{#if headerTitle}}{{headerTitle}}{{/if}}{{#if headerTitle}}{{"Hotel California"}}{{/if}}</h1>
     <hr class="under-h1-style">
 </div>
