--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{title}}</title>
+  <title>{{#if title}}{{title}}{{/if}}{{#unless title}}{{"Hotel California"}}{{/unless}}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -12,7 +12,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/theme.css">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/{{css}}">
+  {{#if css}}
+    <link rel="stylesheet" href="/css/{{css}}">
+  {{/if}}
   {{!-- put your partials css here --}}
   {{#if partialsCSS}}
     {{#each partialsCSS}}
@@ -41,6 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
+            {{#isDevMode}}{{/isDevMode}}
             {{#navLink "/"}}Home{{/navLink}}
             {{#navLink "/about"}}About Us{{/navLink}}
             {{#navLink "/guestrooms"}}Guest Rooms{{/navLink}}
