--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -19,11 +19,15 @@
 
     <h4>Taslima</h4>
     <ul>
-        <li><a href=""></a></li>
+        <li><a href="/about">About Us [done - minor adjustments]</a></li>
+        <li><a href="/contactUs">Contact Us [done - minor adjustments]</a></li>
+        <li><a href="/udpate-email">Update Email [done - minor adjustments]</a></li>
+        <li><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
     </ul>
 
     <h4>Marvie</h4>
     <ul>
-        <li><a href=""></a></li>
+        <li><a href="/restaurant">Restaurant Page</a></li>
+        <li>Hotel Staff pages</li>
     </ul>
 </div>
