added link in nav

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -23,6 +23,7 @@
                         <p>About Us</p>
                         <p>Members</p>
                         <p>Contact Us</p>
+                        <a href="/devlinks">Devlinks</a>
                     </div>
                 </div>
                 <div class="col-md-4">
