added links to other pages

--- a/views/pages/public/guestrooms.hbs
+++ b/views/pages/public/guestrooms.hbs
@@ -20,7 +20,7 @@
 									<h5 class="card-title">{{this.type}}</h5>
 									<p class="card-text">{{this.description}}</p>
 									<p class="card-text">{{this.bedCount}} {{this.bedType}} </p>
-									<a href="#" class="btn btn-primary">View Room Details</a>
+									<a href="/roomdetails" class="btn btn-primary">View Room Details</a>
 								</div>
 							</div>
 						</div>
