--- a/views/pages/public/roomdetails.hbs
+++ b/views/pages/public/roomdetails.hbs
@@ -152,7 +152,8 @@
                     <p class="card-text">Wifi Connectivity </p>
                     <p class="card-text">Laundry Services </p>
                     <p class="card-text">Concierge Services </p>
-                    <button>Reserve Now</button>
+                    <a href="/createaccount"><button>Reserve Now</button></a>
+                    
                 </div>
             </div>
         </div>
