--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -49,7 +49,7 @@
             {{#navLink "/guestrooms"}}Guest Rooms{{/navLink}}
             {{#navLink "/restaurant"}}Restaurant{{/navLink}}
             {{#navLink "/contactUs"}}Contact Us{{/navLink}}
-            {{#navLink "/contactUs"}} <button class="book-now">Book Now</button> {{/navLink}}
+            {{#navLink "/roomdetails"}} <button class="book-now">Book Now</button> {{/navLink}}
 
             <div class="nav-show-small">
               <hr>
