fixed issues with some css and appjs

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -21,7 +21,7 @@
     <ul>
         <li><a href="/about">About Us [done - minor adjustments]</a></li>
         <li><a href="/contactUs">Contact Us [done - minor adjustments]</a></li>
-        <li><a href="/udpate-email">Update Email [done - minor adjustments]</a></li>
+        <li><a href="/update-email">Update Email [done - minor adjustments]</a></li>
         <li><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
     </ul>
 
