Completed the employee online portal login

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -29,5 +29,6 @@
     <ul>
         <li><a href="/restaurant">Restaurant Page</a></li>
         <li>Hotel Staff pages</li>
+        <li><a href="/portal">Employee Online Portal</a></li>
     </ul>
 </div>
