--- a/public/css/partials/h1styled.css
+++ b/public/css/partials/h1styled.css
@@ -4,6 +4,7 @@ hr.under-h1-style {
     color: #e45b32;  
     background-color: #e45b32;  
     opacity: 100% !important;
+    margin: 0;
 }
 
 h1.styled-h1 {
@@ -11,9 +12,25 @@ h1.styled-h1 {
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-    font-size: 3em;
+    font-size: 2.75em;
+    margin: 0;
+    margin-bottom: 0.15em;
 }
 
 .header-container{
     width: fit-content;
+}
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+    h1.styled-h1 {
+        font-size: 2.25em;
+    }
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+    h1.styled-h1 {
+        font-size: 1.5em;
+    }
 }
