completed side acc info partial for dashbaord

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -30,5 +30,6 @@
         <li><a href="/restaurant">Restaurant Page</a></li>
         <li>Hotel Staff pages</li>
         <li><a href="/portal">Employee Online Portal</a></li>
+        <li><a href="/dashboard/staff/65dfe87201b6131436544414">Hotel Staff Account Page</a></li>
     </ul>
 </div>
