--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -8,9 +8,50 @@
     padding: 3em;
 }
 
-.dashbaord-page-content-container {
+.dashboard-page-content-container {
     flex: 1;
     height: 100%;
+    display: flex;
     flex-direction: row;
 }
 
+.dashboard-main-section-container{
+    flex: 1;
+    margin-left: 2em;
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard-main-top{
+    background-color: yellow;
+    flex: 1.25;
+}
+
+.dashboard-main-mid{
+    background-color: red;
+    flex: 1.25;
+}
+
+.dashboard-main-bottom{
+    flex: 3;
+}
+
+@media screen and (max-width: 992px) {
+    .dashboard-main-section-container{
+        margin-left: 1em;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .dashboard-page-content-container {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    
+    .dashboard-main-section-container{
+        margin-left: 0;
+        margin-top: 1em;
+    }
+}
