adjusted css for employee dash

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -7,12 +7,12 @@
                 <div class="dashboard-main-top">
                     <div>
                         <div>
-                            <h2>Hello, Shawna M.</h2>
+                            <h2 class="dash-h2-style">Hello, Shawna M.</h2>
                         </div>
-                        <button>Edit Profile</button>
+                        <button type="button" class="btn btn-outline-primary">Edit Profile</button>
                     </div>
                     <div>
-                        <h3>Today is Feb 23, 2024</h3>
+                        <h3 class="dash-h3-style">Today is Feb 23, 2024</h3>
                     </div>
                 </div>
                 <div class="dashboard-main-mid">
