--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -23,12 +23,13 @@
 }
 
 .dashboard-main-top{
-    background-color: yellow;
     flex: 1.25;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .dashboard-main-mid{
-    background-color: red;
     flex: 1.25;
 }
 
@@ -36,9 +37,25 @@
     flex: 3;
 }
 
+h2.dash-h2-style {
+    color: #484848;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+}
+
+h3.dash-h3-style {
+    color: 484848;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 992px) {
     .dashboard-main-section-container{
         margin-left: 1em;
+    }
+
+    .dashboard-main-top{
+        flex-direction: column;
     }
 }
 
