--- a/public/css/partials/accountInfoSideBar.css
+++ b/public/css/partials/accountInfoSideBar.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     border-radius: 0.5em;
     font-family: "Montserrat", sans-serif;
+    max-height: 40.625em;
 }
 
 .acc-info-sidebar-img-container{
