completed employee dashboard

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -16,8 +16,8 @@
                     </div>
                 </div>
                 <div class="dashboard-main-mid">
-                    <p>3 Guests are checking in today</p>
-                    <a href="">VIEW LIST</a>
+                    <p class="dash-p-mid-style">3 Guests are checking in today</p>
+                    <a class="dash-a-mid-style" href="">VIEW LIST</a>
                 </div>
                 <hr>
                 <div class="dashboard-main-bottom">
