--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -31,6 +31,27 @@
 
 .dashboard-main-mid{
     flex: 1.25;
+    padding-top: 1em;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    color: #484848;
+    font-size: 1.25em;
+}
+
+.dash-a-mid-style{
+    margin: 0;
+    padding: 0;
+    color: #484848;
+    font-size: 0.9em;
+}
+
+.dash-a-mid-style:hover{
+    color: blue;
+}
+
+.dash-p-mid-style{
+    margin: 0;
+    padding: 0;
 }
 
 .dashboard-main-bottom{
@@ -44,10 +65,34 @@ h2.dash-h2-style {
 }
 
 h3.dash-h3-style {
-    color: 484848;
+    color: #484848;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    font-size: 1.5em;
 }
+
+
+.btn-outline-primary {
+    color: #E88F3B;
+    background-color: transparent;
+    background-image: none;
+    border-color: #E88F3B;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    padding: 1em 2em ;
+}
+
+.btn-outline-primary:hover {
+    color: #FFFFFF;
+    background-color: #E88F3B;
+    border-color: #E88F3B
+}
+
+.btn-outline-primary:focus,
+.btn-outline-primary.focus {
+    box-shadow: 0 0 0 .2rem rgba(119, 204, 204, 0.5)
+}
+
 
 @media screen and (max-width: 992px) {
     .dashboard-main-section-container{
@@ -66,9 +111,13 @@ h3.dash-h3-style {
         flex-direction: column;
     }
 
-    
     .dashboard-main-section-container{
         margin-left: 0;
         margin-top: 1em;
+    }
+
+    .btn-outline-primary {
+        width: 100%;
+        margin-bottom: 1em;
     }
 }
