partial finish reservations page

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -31,5 +31,6 @@
         <li>Hotel Staff pages</li>
         <li><a href="/portal">Employee Online Portal</a></li>
         <li><a href="/dashboard/staff/65dfe87201b6131436544414">Hotel Staff Account Page</a></li>
+        <li><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
     </ul>
 </div>
